# setuptools-venv-headers-dir-bug

example1/: ext.c  ext.h  pyproject.toml  setup.py
example2/: ext.c  pyproject.toml  setup.py
